# an.dy

./: README.md  airquality.sample.csv  data607.assignment.#1.markdown.rmd  mushroom.csv
DATA606/: f
DATA607/: assignment#2.sql  data607.assignment.#1.markdown.rmd  fitnessAppLog.csv  mushroom.csv  rating.csv
DATA608/: data608.module4.ipynb  data608.module4.py  hw1.rmd
DATA620/: DATA620 Final Project Proposal - Team 6.ipynb  DATA620.FinalProject..ipynb  data620.GenderClassification.Proj3..ipynb  data620.finalproject.ipynb  test2.ipynb  week1.assignment.data620..ipynb  week1.assignment.data620.ipynb
DATA621/: Homework1_20190226.rmd  groupTwoPredictions.csv
DATA622/: README.md  eda.ipynb  pull_data.py  requirements.txt  (+2 more)
portfolios/ai_analytics_pipeline/: README.md  pyproject.toml  requirements.txt
portfolios/ai_analytics_pipeline/artifacts/: balance_table.csv  business_readout.txt  matched_pairs.csv  matched_panel.csv  summary.json
portfolios/ai_analytics_pipeline/data/mock/: treatment.csv  trips.csv  users.csv  weekly_panel.csv
portfolios/ai_analytics_pipeline/scripts/: generate_mock_data.py  run_pipeline.py
portfolios/ai_analytics_pipeline/src/campaign_eval/: __init__.py  cli.py  config.py  data_generation.py  diagnostics.py  did.py  features.py  matching.py  pipeline.py  reporting.py
portfolios/ai_analytics_pipeline/src/campaign_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
portfolios/ai_analytics_pipeline/src/campaign_eval/utils/: logging_utils.py
portfolios/ai_analytics_pipeline/tests/: test_pipeline.py
(+80 files in other folders)
