[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campaign-eval"
version = "0.1.0"
description = "Reusable campaign evaluation pipeline with matching and Difference-in-Differences"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
campaign-eval = "campaign_eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
